<resources>
    <string name="app_name">RunTracker</string>
    <string name="title_activity_maps">Map</string>
    <string name="start_workout">Start workout</string>
    <string name="runtracker">RunTracker</string>
    <string name="workout_history">Workout History</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>

    <string name="my_notification_title_template">My: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="my_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit
        amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
